# pyb2d3

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_box2d.sh  build_deps.sh  build_pkg.sh  dev-environment.yaml  pyproject.toml
.github/workflows/: conda.yaml  docs.yaml  mm.yaml  pixi.yml  publish.yaml  raw-cmake.yaml  test.yml
benchmark/: test_tuple.py
companion_packages/pyb2d3_sandbox/: pyproject.toml
companion_packages/pyb2d3_sandbox/pyb2d3_sandbox/: __init__.py  default_frontend.py  frontend_base.py  sample_base.py  ui_elements.py
companion_packages/pyb2d3_sandbox_ipycanvas/: pyproject.toml
companion_packages/pyb2d3_sandbox_ipycanvas/pyb2d3_sandbox_ipycanvas/: debug_draw_offscreen.py  debug_draw_vanilla.py  init.js  ipycanvas_frontend.py  render_loop.py  ui.py
companion_packages/pyb2d3_sandbox_jupyter/: pyproject.toml
companion_packages/pyb2d3_sandbox_jupyter/pyb2d3_sandbox_jupyter/: canvas_widget.js  canvas_widget.py  jupyter_frontend.py
companion_packages/pyb2d3_sandbox_lite/: pyproject.toml
companion_packages/pyb2d3_sandbox_lite/pyb2d3_sandbox_lite/: __init__.py  debug_draw_offscreen.py  lite_frontend.py
companion_packages/pyb2d3_sandbox_lite/pyb2d3_sandbox_lite/ipycanvaslite/: __init__.py  call_repeated.py  ipycanvas_lite.py  jsutils.py  offscreen_canvas.py
companion_packages/pyb2d3_sandbox_lite/pyb2d3_sandbox_lite/ipycanvaslite/js/: init.js
companion_packages/pyb2d3_sandbox_opengl/: pyproject.toml
companion_packages/pyb2d3_sandbox_opengl/pyb2d3_sandbox_opengl/: debug_draw_gl.py  draw.py  opengl_frontend.py  shader.py
companion_packages/pyb2d3_sandbox_pygame/: pyproject.toml
companion_packages/pyb2d3_sandbox_pygame/pyb2d3_sandbox_pygame/: __init__.py  pygame_frontend.py
docs/: conf.py  index.rst
docs/doc_tools/: __init__.py
emscripten_forge/recipe/: build_pkg.sh  recipe.yaml.template
examples/: examples_to_notebooks.sh  newtons_craddle.py  tumbler.py
examples/notebooks/: raycast.ipynb
examples/pyb2d3_samples/: __init__.py  billard.py  cast_ray_callback.py  chain_builder.py  coupled_minigolf.py  goo.py  goo_game.py  joints.py  jump.py  meteor.py  minigolf.py  mirror.py  newtons_craddle.py  newtons_cradle.py  ragdoll.py  raycast.py  shapes.py  soft_bodies.py  text.py  tumbler.py
examples/samples/: mirror.py  newtons_craddle.py  raycast.py  shapes.py  tumbler.py
include/bb2d/: debug_draw.hpp
include/pyb2d/: debug_draw.hpp  py_converter.hpp  wrapper_structs.hpp
include/pyb2d3/: batch_api.hpp  debug_draw.hpp  py_converter.hpp  world_to_canvas.hpp  wrapper_structs.hpp
include/pyb2d3/batch_api/: ndarray_traits.hpp
include/pyb2d_playground/: pyb2d_playground.hpp  settings.h
include/pyb2d_playground/frontend/: frontend_base.hpp
playground/: CMakeLists.txt
playground/src/cpp/: frontend_base.hpp  main.cpp  py_sample_base.hpp  sample.cpp  sample.h  settings.h
playground/src/cpp/opengl_frontend/: draw.cpp  draw.h  not_main.cpp  opengl_frontend.cpp  opengl_frontend.hpp
playground/src/module/pyb2d_playground/: __init__.py
py_samples/: hello_world.py
python/: CMakeLists.txt  export_box2d_functions.cpp  export_box2d_types.cpp  pybb2d.cpp
python/module/bb2d/: __init__.py
python/module/bb2d_samples/: __init__.py
python/module/pyb2d/: __init__.py  compound_shape.py
python/module/pyb2d_samples/: __init__.py
python/src/: CMakeLists.txt  converter.hpp  export_box2d_functions.cpp  export_box2d_types.cpp  export_collision.cpp  export_math_functions.cpp  main.cpp  py_debug_draw.cpp  py_debug_draw.hpp
python/src/pyb2d/: CMakeLists.txt  export_box2d_types.cpp  export_math_functions.cpp  py_debug_draw.hpp
python/test/: conftest.py  test_bb2d.py  test_utils.py
samples/: CMakeLists.txt  bb2d_samples.cpp  draw.cpp  draw.h  not_main.cpp  opengl_frontend.cpp  opengl_frontend.hpp  py_sample_base.hpp  pyb2d_samples.cpp  sample.cpp  sample.h  settings.h  ui_backend_opengl.hpp
scripts/: build_emscripten_forge_pkg.sh  build_lite_env.sh  examples_to_notebooks.sh
src/: CMakeLists.txt  export_batch_api.cpp  export_box2d_functions.cpp  export_box2d_types.cpp  export_box2d_wrapper_structs.cpp  export_collision.cpp  export_extras.cpp  export_math_functions.cpp  export_threadpool.cpp  main.cpp  py_debug_draw.cpp  py_debug_draw.hpp
src/module/pyb2d/: __init__.py  __main__.py  compound_shape.py  extra_shapes.py  font_shape.py
src/module/pyb2d3/: __init__.py
src/module/pyb2d3/debug_draw/: __init__.py  debug_draw.py  no_op_debug_draw.py  pygame_debug_draw.py
src/module/pyb2d3/samples/: __init__.py  sample_base.py
src/module/pyb2d3/samples/frontend/: __init__.py  default_frontend.py  frontend_base.py  headless_frontend.py  ipycanvas_frontend.py  pygame.py  pygame_frontend.py  sample_to_video.py
src/module/pyb2d_jupyter/: __init__.py  canvas.py  timing.py
src/pyb2d/: __init__.py  extra_shapes.py  font_shape.py
src/pyb2d/py_core/: __init__.py
src/pyb2d_playground/: .gitignore  __init__.py
src/pyb2d_playground/frontend/: frontend_base.cpp
src/src_pyb2d/: CMakeLists.txt  export_box2d_functions.cpp  export_box2d_types.cpp  export_collision.cpp  export_math_functions.cpp  main.cpp  py_debug_draw.cpp  py_debug_draw.hpp
src/src_pyb2d_playground/: CMakeLists.txt  frontend_base.cpp  frontend_base.hpp  main.cpp  py_sample_base.hpp  sample.cpp  sample.h  settings.h
src/src_pyb2d_playground/opengl_frontend/: draw.cpp  draw.h  not_main.cpp  opengl_frontend.cpp  opengl_frontend.hpp  shader.cpp  shader.h
tests/: conftest.py  headless_test_frontend.py  test_pyb2d3.py  test_samples.py  test_utils.py
tests/pyb2d_tests/: conftest.py  test_bb2d.py  test_utils.py
