[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core", "nanobind"]

[project]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
description = "python box2d bindings for box2d >= 3.1"
name = "pyb2d3"
requires-python = ">=3.9"
version = "0.2.1"

dependencies = [
  "numpy"
]



[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

[tool.scikit-build]
cmake.source-dir = "."
sdist.exclude = [".pixi"]
wheel.packages = ["pyb2d"]
# # Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.pytest.ini_options]
minversion = "6.2.5"
testpaths = [
    "tests"
]
